--- a/politicas.html
+++ b/politicas.html
@@ -284,19 +284,21 @@
   </div>
   
   <footer class="footer">
-    <ul class="footer-menu">
-      <li style="font-weight: bold;">ENLACES RÁPIDOS</li>
-      <li><a href="contacto.html">Contacto</a></li>
-      <li><a href="politicas.html">Cuestiones legales</a></li>
-      <li><a href="https://www.instagram.com/leozama21/" target="_blank">Intagram</a></li>
-    </ul>
+    <div class="footer-menu-container">
+        <h1>ENLACES RÁPIDOS</h1>
+        <ul class="footer-menu">
+            <li><a href="contacto.html">"Contacto"</a></li>
+            <li><a href="politicas.html">"Cuestiones legales"</a></li>
+            <li><a href="https://www.instagram.com/leozama21/" target="_blank">"Instagram"</a></li>
+        </ul>
+    </div>
     <div class="payment-methods">
-      <img src="ima/pay.png" alt="Formas de pago">
+        <img src="ima/pay.png" alt="Formas de pago">
     </div>
     <div class="footer-text">
-      Whalas™ 2024 @ todos los derechos reservados
+        Whalas™ 2024 @ todos los derechos reservados
     </div>
-  </footer>
+</footer>
   
 <script src="politicas.js"></script> <!-- Asegúrate de enlazar correctamente tu archivo JavaScript -->
 </body>
