--- a/catalogo.html
+++ b/catalogo.html
@@ -9,9 +9,51 @@
 <body>
     <div class="slider">
         <div class="slide-track">
-            <!-- Slider content -->
+            <div class="slide">
+                <p class="slide-text">🐳Whalas™🐳</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">25% este verano!</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">🐳Whalas™🐳</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">25% este verano!</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">🐳Whalas™🐳</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">25% este verano!</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">🐳Whalas™🐳</p>
+            </div>
+    
+            <div class="slide">
+                <p class="slide-text">25% este verano!</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">🐳Whalas™🐳</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">25% este verano!</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">🐳Whalas™🐳</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">25% este verano!</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">🐳Whalas™🐳</p>
+            </div>
+            <div class="slide">
+                <p class="slide-text">25% este verano!</p>
+            </div>
         </div>
-    </div>
+      </div>
     
     <div class="navbar">
         <div class="menu-icon" onclick="toggleMenu()">
