--- a/catalogo.html
+++ b/catalogo.html
@@ -55,9 +55,9 @@
         </div>
       </div>
     
-    <div class="navbar">
+      <div class="navbar">
         <div class="menu-icon" onclick="toggleMenu()">
-            <img src="ima/barra-de-menu.png" alt="Menu Icon">
+            &#9776; <!-- Icono de hamburguesa -->
         </div>
         <div class="logo">
             <a href="index.html">
@@ -67,9 +67,9 @@
         
         <div class="menu" id="menu">
             <div class="close-icon" onclick="toggleMenu()">
-                <img src="ima/cerrar.png" alt="Close Icon">
+                &times; <!-- Icono de cerrar -->
             </div>
-            <a href="index.html">Home</a>
+            <a href="index.html">Inicio</a>
             <div class="submenu">
                 <a href="#" onclick="toggleSubmenu(event)">Nuestros productos</a>
                 <div class="submenu-content" id="submenu-content">
