--- a/sb.html
+++ b/sb.html
@@ -58,7 +58,7 @@
     
   <div class="navbar">
     <div class="menu-icon" onclick="toggleMenu()">
-        <img src="ima/barra-de-menu.png" alt="Menu Icon">
+        &#9776; <!-- Icono de hamburguesa -->
     </div>
     <div class="logo">
         <a href="index.html">
@@ -68,9 +68,9 @@
     
     <div class="menu" id="menu">
         <div class="close-icon" onclick="toggleMenu()">
-            <img src="ima/cerrar.png" alt="Close Icon">
+            &times; <!-- Icono de cerrar -->
         </div>
-        <a href="index.html">Home</a>
+        <a href="index.html">Inicio</a>
         <div class="submenu">
             <a href="#" onclick="toggleSubmenu(event)">Nuestros productos</a>
             <div class="submenu-content" id="submenu-content">
@@ -83,10 +83,10 @@
     </div>
     <div class="search-cart-container">
         <div class="search-container">
-            <input type="text" id="search" placeholder="Buscar...">
-            <img src="ima/bus.png" alt="Buscar" id="search-icon">
+            <input type="text" id="search" placeholder="Buscar..." oninput="buscarProducto()">
+            <img src="ima/bus.png" alt="Buscar" id="search-icon" onclick="toggleSearch()">
         </div>
-        <div class="carrito">
+        <div class="carrito" onclick="abrirModal()">
             <img src="ima/car3.png" alt="Carrito de compras" id="carrito-icon">
             <h2 id="carrito-total"></h2>
         </div>
