--- a/catalogo.html
+++ b/catalogo.html
@@ -119,17 +119,24 @@
 
     <div id="carrito-modal" class="modal">
         <div class="modal-header">
-            <h2 class="carrito-titulo">Carrito de Compras</h2>
+            <h2 class="carrito-titulo">Tu carrito</h2>
             <span class="modal-close" onclick="cerrarModal()">&times;</span>
         </div>
         <div class="modal-body">
             <div id="carrito-vacio" class="carrito-vacio" style="display: none;">Tu carrito está vacío.</div>
-            <div id="carrito-productos"></div>
-            <div class="subtotal-container">
-                <div class="subtotal-title">Subtotal:</div>
-                <div id="subtotal" class="subtotal-amount"></div>
+            <div class="product-price-header">
+                <div class="header-producto">Producto</div>
+                <div class="header-precio">Total</div>
             </div>
-            <button class="pagar-todo" onclick="pagar()">Pagar</button>
+            <hr class="divider">
+            <div id="carrito-productos"></div>
+            <hr class="divider">
+            <div class="subtotal-container">
+                <div class="subtotal-title">Total estimado</div>
+                <div id="subtotal" class="subtotal-amount">$0.00</div>
+            </div>
+            <p class="impuestos">Impuestos, descuentos y envío calculados en la pantalla de pago.</p>
+            <button class="pagar-todo" onclick="pagar()">Pagar pedido</button>
         </div>
     </div>
 
