--- a/pago.html
+++ b/pago.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Pago</title>
+    <link rel="icon" href="ima/favicon.ico" type="image/x-icon">
+    <!-- Alternativa para dispositivos Apple -->
+    <link rel="apple-touch-icon" href="ima/favicon.ico">
+    <!-- Alternativa para dispositivos Android -->
+    <link rel="icon" sizes="192x192" href="ima/favicon.ico">
     <link rel="stylesheet" href="pago.css">
     <script src="https://www.paypal.com/sdk/js?client-id=AXke1XSJir5Ge_0d86T6ViMyiwrjbt-h9kZrmAjBjZAPYuavMMCJ5E37kCs8AoeXsbXnMwAwVkiqoYq2&currency=MXN" data-sdk-integration-source="button-factory"></script>
 </head>
