--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="icon" href="ima/favicon.ico" type="image/x-icon">
+    <!-- Alternativa para dispositivos Apple -->
+    <link rel="apple-touch-icon" href="ima/favicon.ico">
+    <!-- Alternativa para dispositivos Android -->
+    <link rel="icon" sizes="192x192" href="ima/favicon.ico">
     <link rel="stylesheet" href="contacto.css">
 </head>
 <body>
@@ -98,85 +103,91 @@
             <span class="modal-close" onclick="cerrarModal()">&times;</span>
         </div>
         <div class="modal-body">
-            <div id="carrito-vacio" class="carrito-vacio" style="display: none;">Tu carrito está vacío.</div>
-            <div class="product-price-header">
-                <div class="header-producto">Producto</div>
-                <div class="header-precio">Total</div>
+            <div id="carrito-vacio" class="carrito-vacio" style="display: none;">
+                <p class="carrito-vacio-texto">CARRITO VACIO</p>
+                <button class="ir-catalogo" onclick="window.location.href='catalogo.html'">Ir al Catálogo</button>
             </div>
-            <hr class="divider">
-            <div id="carrito-productos"></div>
-            <hr class="divider">
-            <div class="subtotal-container">
-                <div class="subtotal-title">Total estimado</div>
-                <div id="subtotal" class="subtotal-amount">$0.00</div>
+            <div id="carrito-con-productos">
+                <div class="product-price-header">
+                    <div class="header-producto">Producto</div>
+                    <div class="header-precio">Total</div>
+                </div>
+                <hr class="divider">
+                <div id="carrito-productos"></div>
+                <hr class="divider">
+                <div class="subtotal-container">
+                    <div class="subtotal-title">Total estimado</div>
+                    <div id="subtotal" class="subtotal-amount">$0.00</div>
+                </div>
+                <p class="impuestos">Impuestos, descuentos y envío calculados en la pantalla de pago.</p>
+                <button class="pagar-todo" onclick="pagar()">Pagar pedido</button>
             </div>
-            <p class="impuestos">Impuestos, descuentos y envío calculados en la pantalla de pago.</p>
-            <button class="pagar-todo" onclick="pagar()">Pagar pedido</button>
         </div>
     </div>
 
     <!-- Formulario de contacto -->
-    <form class="contact-form">
-        <h1>Contacto</h1>
-        <p>Nos comunicaremos con usted dentro de las 48 horas...</p>
-        <div class="form-row">
-            <div class="form-group">
-                <label for="first-name">Nombre <span>*</span></label>
-                <div class="input-container">
-                    <input type="text" id="first-name" name="first-name">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="last-name">Apellido <span>*</span></label>
-                <div class="input-container">
-                    <input type="text" id="last-name" name="last-name">
-                </div>
+<form class="contact-form" action="contacto.php" method="post" enctype="multipart/form-data">
+    <h1>Contacto</h1>
+    <p>Nos comunicaremos con usted dentro de las 48 horas...</p>
+    <div class="form-row">
+        <div class="form-group">
+            <label for="first-name">Nombre <span>*</span></label>
+            <div class="input-container">
+                <input type="text" id="first-name" name="first-name" required>
             </div>
         </div>
         <div class="form-group">
-            <label for="email">Email <span>*</span></label>
+            <label for="last-name">Apellido <span>*</span></label>
             <div class="input-container">
-                <input type="email" id="email" name="email">
+                <input type="text" id="last-name" name="last-name" required>
             </div>
         </div>
-        <div class="form-group">
-            <label for="order-number">Número de orden</label>
-            <p>Se le proporcionó cuando realizó su pedido. Si no puede encontrar su número de pedido, déjelo en blanco...</p>
-            <div class="input-container">
-                <input type="text" id="order-number" name="order-number">
-            </div>
+    </div>
+    <div class="form-group">
+        <label for="email">Email <span>*</span></label>
+        <div class="input-container">
+            <input type="email" id="email" name="email" required>
         </div>
-        <div class="form-group">
-            <label for="subject">Subject <span>*</span></label>
-            <div class="input-container">
-                <select id="subject" name="subject">
-                    <option value="">Peticiones sobre producto</option>
-                    <option value="">Consulta de envío</option>
-                    <option value="">Tamaño (Adjuntar foto)</option>
-                    <option value="">Producto Dañado (Adjuntar Foto)</option>
-                    <option value="">Estado del pedido</option>
-                    <option value="">Cancelar pedido/reembolso</option>
-                    <option value="">Dirección incorrecta</option>
-                    <option value="">Otro</option>
-                </select>
-            </div>
+    </div>
+    <div class="form-group">
+        <label for="order-number">Número de orden</label>
+        <p>Se le proporcionó cuando realizó su pedido. Si no puede encontrar su número de pedido, déjelo en blanco...</p>
+        <div class="input-container">
+            <input type="text" id="order-number" name="order-number">
         </div>
-        <div class="form-group">
-            <label for="message">Mensaje <span>*</span></label>
-            <p>Como podemos ayudarte?</p>
-            <div class="input-container">
-                <textarea id="message" name="message"></textarea>
-            </div>
+    </div>
+    <div class="form-group">
+        <label for="subject">Asunto <span>*</span></label>
+        <div class="input-container">
+            <select id="subject" name="subject" required>
+                <option value="Peticiones sobre producto">Peticiones sobre producto</option>
+                <option value="Consulta de envío">Consulta de envío</option>
+                <option value="Tamaño (Adjuntar foto)">Tamaño (Adjuntar foto)</option>
+                <option value="Producto Dañado (Adjuntar Foto)">Producto Dañado (Adjuntar Foto)</option>
+                <option value="Estado del pedido">Estado del pedido</option>
+                <option value="Cancelar pedido/reembolso">Cancelar pedido/reembolso</option>
+                <option value="Dirección incorrecta">Dirección incorrecta</option>
+                <option value="Otro">Otro</option>
+            </select>
         </div>
-        <div class="form-group">
-            <label for="file-upload">Subir archivo</label>
-            <p>El tamaño máximo de archivo es de 10 MB.</p>
-            <div class="input-container">
-                <input type="file" id="file-upload" name="file-upload">
-            </div>
+    </div>
+    <div class="form-group">
+        <label for="message">Mensaje <span>*</span></label>
+        <p>¿Cómo podemos ayudarte?</p>
+        <div class="input-container">
+            <textarea id="message" name="message" required></textarea>
         </div>
-        <button type="submit">Enviar</button>
-    </form>
+    </div>
+    <div class="form-group">
+        <label for="file-upload">Subir archivo</label>
+        <p>El tamaño máximo de archivo es de 10 MB.</p>
+        <div class="input-container">
+            <input type="file" id="file-upload" name="file-upload" accept="image/*">
+        </div>
+    </div>
+    <button type="submit">Enviar</button>
+</form>
+
 
     <footer class="footer">
         <div class="footer-menu-container">
