--- a/index.html
+++ b/index.html
@@ -99,29 +99,34 @@
           </div>
       </div>
   
-      <!-- Modal del carrito -->
       <div id="carrito-modal" class="modal">
         <div class="modal-header">
             <h2 class="carrito-titulo">Tu carrito</h2>
             <span class="modal-close" onclick="cerrarModal()">&times;</span>
         </div>
         <div class="modal-body">
-            <div id="carrito-vacio" class="carrito-vacio" style="display: none;">Tu carrito está vacío.</div>
-            <div class="product-price-header">
-                <div class="header-producto">Producto</div>
-                <div class="header-precio">Total</div>
+            <div id="carrito-vacio" class="carrito-vacio" style="display: none;">
+                <p class="carrito-vacio-texto">CARRITO VACIO</p>
+                <button class="ir-catalogo" onclick="window.location.href='catalogo.html'">Ir al Catálogo</button>
             </div>
-            <hr class="divider">
-            <div id="carrito-productos"></div>
-            <hr class="divider">
-            <div class="subtotal-container">
-                <div class="subtotal-title">Total estimado</div>
-                <div id="subtotal" class="subtotal-amount">$0.00</div>
+            <div id="carrito-con-productos">
+                <div class="product-price-header">
+                    <div class="header-producto">Producto</div>
+                    <div class="header-precio">Total</div>
+                </div>
+                <hr class="divider">
+                <div id="carrito-productos"></div>
+                <hr class="divider">
+                <div class="subtotal-container">
+                    <div class="subtotal-title">Total estimado</div>
+                    <div id="subtotal" class="subtotal-amount">$0.00</div>
+                </div>
+                <p class="impuestos">Impuestos, descuentos y envío calculados en la pantalla de pago.</p>
+                <button class="pagar-todo" onclick="pagar()">Pagar pedido</button>
             </div>
-            <p class="impuestos">Impuestos, descuentos y envío calculados en la pantalla de pago.</p>
-            <button class="pagar-todo" onclick="pagar()">Pagar pedido</button>
         </div>
     </div>
+    
 
 
 <div class="hero">
