--- a/politicas.html
+++ b/politicas.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acordeón con Flechas</title>
+  <link rel="icon" href="ima/favicon.ico" type="image/x-icon">
+    <!-- Alternativa para dispositivos Apple -->
+    <link rel="apple-touch-icon" href="ima/favicon.ico">
+    <!-- Alternativa para dispositivos Android -->
+    <link rel="icon" sizes="192x192" href="ima/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="politicas.css"> <!-- Asegúrate de enlazar correctamente tu archivo CSS -->
 </head>
@@ -93,14 +98,17 @@
         </div>
     </div>
 
-          <!-- Modal del carrito -->
-          <div id="carrito-modal" class="modal">
-            <div class="modal-header">
-                <h2 class="carrito-titulo">Tu carrito</h2>
-                <span class="modal-close" onclick="cerrarModal()">&times;</span>
+    <div id="carrito-modal" class="modal">
+        <div class="modal-header">
+            <h2 class="carrito-titulo">Tu carrito</h2>
+            <span class="modal-close" onclick="cerrarModal()">&times;</span>
+        </div>
+        <div class="modal-body">
+            <div id="carrito-vacio" class="carrito-vacio" style="display: none;">
+                <p class="carrito-vacio-texto">CARRITO VACIO</p>
+                <button class="ir-catalogo" onclick="window.location.href='catalogo.html'">Ir al Catálogo</button>
             </div>
-            <div class="modal-body">
-                <div id="carrito-vacio" class="carrito-vacio" style="display: none;">Tu carrito está vacío.</div>
+            <div id="carrito-con-productos">
                 <div class="product-price-header">
                     <div class="header-producto">Producto</div>
                     <div class="header-precio">Total</div>
@@ -116,6 +124,8 @@
                 <button class="pagar-todo" onclick="pagar()">Pagar pedido</button>
             </div>
         </div>
+    </div>
+    
 
     <div class="accordion">
     <div class="accordion-item">
