--- a/contacto.html
+++ b/contacto.html
@@ -205,6 +205,7 @@
             Whalas™ 2024 @ todos los derechos reservados
         </div>
     </footer>
-      <script src="contacto.js"></script>
+        <script type="module" src="contacto.js"></script>
+
 </body>
 </html>
