--- a/contacto.html
+++ b/contacto.html
@@ -126,7 +126,8 @@
     </div>
 
     <!-- Formulario de contacto -->
-<form class="contact-form" action="contacto.php" method="post" enctype="multipart/form-data">
+<form class="contact-form" id="contact-form" enctype="multipart/form-data">
+
     <h1>Contacto</h1>
     <p>Nos comunicaremos con usted dentro de las 48 horas...</p>
     <div class="form-row">
