--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,7 @@
     <!-- Alternativa para dispositivos Android -->
     <link rel="icon" sizes="192x192" href="ima/favicon.ico">
     <link rel="stylesheet" href="contacto.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <div class="slider">
@@ -206,7 +207,8 @@
             Whalas™ 2024 @ todos los derechos reservados
         </div>
     </footer>
-        <script type="module" src="contacto.js"></script>
+        <script src="contacto.js"></script>
+
 
 </body>
 </html>
